--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@babel/preset-react": "^7.9.4",
     "phoenix": "file:deps/phoenix",
     "phoenix_html": "file:deps/phoenix_html",
+    "phoenix_live_view": "file:deps/phoenix_live_view",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2"
